--- a/wm/mako.org
+++ b/wm/mako.org
@@ -20,17 +20,17 @@
 
   Colors:
   #+BEGIN_SRC conf
-    background-color=<<base02>>
-    text-color=<<base05>>
-    border-color=<<base05>>
+    background-color=#<<base02>>
+    text-color=#<<base05>>
+    border-color=#<<base05>>
 
     [urgency=low]
-    background-color=<<base01>>
-    text-color=<<base03>>
-    border-color=<<base05>>
+    background-color=#<<base01>>
+    text-color=#<<base03>>
+    border-color=#<<base05>>
 
     [urgency=high]
-    background-color=<<base08>>
-    text-color=<<base06>>
-    border-color=<<base05>>
+    background-color=#<<base08>>
+    text-color=#<<base06>>
+    border-color=#<<base05>>
   #+END_SRC
