--- a/wm/waybar.org
+++ b/wm/waybar.org
@@ -16,7 +16,7 @@
      "layer": "top",
      "modules-left": ["sway/workspaces", "sway/mode"],
      "modules-center": ["mpd"],
-     "modules-right": ["tray", "clock", "backlight", "pulseaudio", "memory", "cpu", "battery"],
+     "modules-right": ["tray", "clock", "network", "backlight", "pulseaudio", "memory", "cpu", "battery"],
    #+END_SRC
 ** Sway workspaces
    #+BEGIN_SRC js
@@ -57,6 +57,13 @@
          "format": " {:%H:%M}",
          "format-alt": " {:%a, %d.%m. %H:%M}",
          "tooltip": false
+     },
+   #+END_SRC
+** Network
+   #+BEGIN_SRC js
+     "network": {
+         "format-wifi": "直 {essid} {signalStrength}%",
+         "format-disconnected": "睊 off"
      },
    #+END_SRC
 ** Backlight
@@ -156,7 +163,7 @@
          border-bottom: 3px solid #<<base0D>>;
      }
 
-     #mode, #tray, #clock, #backlight, #pulseaudio, #memory, #cpu {
+     #mode, #tray, #clock, #network, #backlight, #pulseaudio, #memory, #cpu {
          padding: 0 10px;
          margin: 0 5px;
          border-bottom: 3px solid #<<base00>>;
@@ -171,7 +178,7 @@
          border-bottom: 3px solid #<<base04>>;
      }
 
-     #pulseaudio.muted, #pulseaudio.no-sound {
+     #network.disconnected, #pulseaudio.muted, #pulseaudio.no-sound {
          border-bottom: 3px solid #<<base0A>>;
      }
 
