Make Mopidy compatible with beets

--- a/music/mopidy.org
+++ b/music/mopidy.org
@@ -25,6 +25,7 @@
   #+BEGIN_SRC conf
     [local]
     media_dir = ~/Music
+    scan_follow_symlinks = true
   #+END_SRC
 * Scrobbler
   Scrobble to [[https://www.last.fm]]:
