--- a/term/bash.org
+++ b/term/bash.org
@@ -54,6 +54,7 @@
     export XDG_CONFIG_HOME="${HOME}/.config"
     export XDG_CACHE_HOME="${HOME}/.cache"
     export XDG_DATA_HOME="${HOME}/.local/share"
+    export XDG_CURRENT_DESKTOP='sway'
   #+END_SRC
 
   Source =~/.bashrc=
